# RobotDesign3_poop

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: camera.yaml  realsense.yaml
launch/: README.md  ar.launch  ar_gazebo.launch  ar_realsense.launch  cam_proc.launch  poop_sim.launch
models/marker000/: model.config  model.sdf
models/marker000/materials/: marker000.material
models/marker001/: model.config  model.sdf
models/marker001/materials/: marker001.material
models/poop_lower/: model.config  model.sdf  poop3.dae
models/poop_middle/: model.config  model.sdf  poop2.dae
models/poop_texture/: memo.txt
models/poop_upper/: model.config  model.sdf  poop1.dae
models/stage/: model.config  model.sdf  stage.dae
scripts/: ar_subscriber.py  hanoi.py  main.py  move_to_poop1.py
slides/1024/: index.html
slides/1219/: index.html  soiya.md
worlds/: poop.world
