<?xml version="1.0"?>
<package format="2">
  <name>poop_world</name>
  <version>0.0.0</version>
  <description>The poop_world package</description>

  <maintainer email="asouhide2002@gmail.com">Aso Hidetoshi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}/worlds" />
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>
</package>
